--- a/SushistarIS/src/main/resources/application.properties
+++ b/SushistarIS/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/SushistarDbIS
 spring.datasource.username=root
 spring.datasource.password=Tort1239
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
